--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -60,7 +60,7 @@ einops==0.8.1
 
 
 ftfy==6.2.3
-pypdf==4.3.1
+pypdf==3.17.4
 fpdf2==2.8.2
 pymdown-extensions==10.14.2
 docx2txt==0.8
@@ -138,3 +138,14 @@ opentelemetry-instrumentation-requests==0.52b1
 opentelemetry-instrumentation-logging==0.52b1
 opentelemetry-instrumentation-httpx==0.52b1
 opentelemetry-instrumentation-aiohttp-client==0.52b1
+
+# Custom Loader Requirements
+camelot_py==1.0.0
+numpy==1.26.4
+pdfminer_six==20250416
+pi_heif==0.22.0
+tabulate==0.9.0
+typing_extensions==4.13.2
+unstructured_inference==0.8.10
+wrapt==1.17.2
+langchain_core==0.3.58
