--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,12 +66,12 @@ dependencies = [
     "einops==0.8.1",
 
     "ftfy==6.2.3",
-    "pypdf==4.3.1",
+    "pypdf==3.17.4",
     "fpdf2==2.8.2",
     "pymdown-extensions==10.14.2",
     "docx2txt==0.8",
-    "python-pptx==1.0.0",
-    "unstructured==0.16.17",
+    "python-pptx==1.0.1",
+    "unstructured[all-docs]==0.17.2",
     "nltk==3.9.1",
     "Markdown==3.7",
     "pypandoc==1.15",
@@ -129,6 +129,18 @@ dependencies = [
     "gcp-storage-emulator>=2024.8.3",
 
     "moto[s3]>=5.0.26",
+
+    "camelot_py==1.0.0",
+    "numpy==1.26.4",
+    "pdfminer_six==20250416",
+    "pi_heif==0.22.0",
+    "tabulate==0.9.0",
+    "typing_extensions==4.13.2",
+    "unstructured_inference==0.8.10",
+    "wrapt==1.17.2",
+    "langchain_core==0.3.58",
+    "pdf2image==1.17.0",
+    "pypdfium2==4.30.1"
 
 ]
 readme = "README.md"
