--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -60,12 +60,12 @@ einops==0.8.1
 
 
 ftfy==6.2.3
-pypdf==3.17.4
+pypdf==4.3.1
 fpdf2==2.8.2
 pymdown-extensions==10.14.2
 docx2txt==0.8
-python-pptx==1.0.0
-unstructured==0.16.17
+python-pptx==1.0.1
+unstructured[all-docs]==0.17.2
 nltk==3.9.1
 Markdown==3.7
 pypandoc==1.15
