--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -64,8 +64,8 @@ pypdf==4.3.1
 fpdf2==2.8.2
 pymdown-extensions==10.14.2
 docx2txt==0.8
-python-pptx==1.0.0
-unstructured==0.16.17
+python-pptx==1.0.1
+unstructured[all-docs]==0.17.2
 nltk==3.9.1
 Markdown==3.7
 pypandoc==1.15
@@ -138,3 +138,14 @@ opentelemetry-instrumentation-requests==0.52b1
 opentelemetry-instrumentation-logging==0.52b1
 opentelemetry-instrumentation-httpx==0.52b1
 opentelemetry-instrumentation-aiohttp-client==0.52b1
+
+# Custom Loader Requirements
+camelot_py==1.0.0
+numpy==1.26.4
+pdfminer_six==20250416
+pi_heif==0.22.0
+tabulate==0.9.0
+typing_extensions==4.13.2
+unstructured_inference==0.8.10
+wrapt==1.17.2
+langchain_core==0.3.58
